# kobbe

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  TO_DO.rst  pyproject.toml
.github/workflows/: ci_pytest_kobbe_macOS.yml  ci_pytest_kobbe_ubuntu.yml  ci_pytest_kobbe_ubuntu_py11.yml  ci_pytest_kobbe_win.yml
docs/: requirements.txt
docs/example_notebooks/basic_example/: Example notebook for Sig500 ice draft.ipynb
docs/example_notebooks/basic_example/test_data/: S100812A002_AeN_M1_1.mat  S100812A002_AeN_M1_2.mat
docs/orphan_docs/: orphan_README_content.md
docs/source/: .gitattributes  conf.py  index.rst
docs/source/code_breakdown/: code_breakdown.rst
docs/source/functions/: functions.rst  functions_append.rst  functions_calc.rst  functions_icedraft.rst  functions_load.rst  functions_toolbox.rst  functions_vel.rst
docs/source/misc/other_examples/: asl_ips.md
docs/source/notebooks/: Example_notebook_Sig500_ice_draft.ipynb
docs/source/pipeline/: pipeline.md
kobbe/: sig_append.py  sig_toolbox.py
pyiceproc/: sig_append.py  sig_calc.py  sig_draft.py  sig_load.py  sig_vel.py
src/kobbe/: __init__.py  append.py  calc.py  draft.py  export.py  icedraft.py  load.py  sig_draft.py  sig_load.py  toolbox.py  vel.py
src/kobbe/metadata_dicts/: _variables.py
tests/: conftest.py
tests/functional_tests/: test_full_functional.py
tests/test_data/: CARRA_MSL_M1_temp.p
tests/unit_tests/: test_load.py
